--- a/index.html
+++ b/index.html
@@ -1,8 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>ENLYTEN Photography</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
+  <header>
+    <div id="header">
+      <img src="http://i349.photobucket.com/albums/q397/oghp78/df505e78-2e0d-4787-9719-c0eb5e361bdc_zpsudeyo35j.jpg" id="headerImage">
+    </div>
+  </header>
+
+<nav class="navbar navbar-default">
+
+ <!--  <div class="container-fluid"> -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">ENLYTEN</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Weddings <span class="sr-only"></span></a></li>
+        <li><a href="#">People</a></li>
+        <li><a href="#">Nature</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="https://www.instagram.com/enlyten_photography/?hl=en" target="blank"> <img src="https://5a5a57ff32a328601212-ee0df397c56b146e91fe14be42fa361d.ssl.cf1.rackcdn.com/icon/instagram_logos_glyph/03H5cHNMt-Jni4pe9u+7/glyph-logo_May2016_200.png" border="0" id="instagram"/></a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+</nav>
+
+<div id="container" class="cols">
+    <div class="box one"></div>
+    <div class="box two"></div>
+    <div class="box one"></div>
+    <div class="box three"></div>
+    <div class="box two"></div>
+    <div class="box five"></div>
+    <div class="box one"></div>
+    <div class="box two"></div>
+    <div class="box six"></div>
+    <div class="box three"></div>
+    <div class="box two"></div>
+</div>
+
+
+
+
 <body>
  
 </body>
