Masonry Layout Portfolio 1
Added photos to get a feel for the layout (more to come). Working on
links now

--- a/index.html
+++ b/index.html
@@ -34,19 +34,30 @@
         <li><a href="#">Nature</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="https://www.instagram.com/enlyten_photography/?hl=en" target="blank"> <img src="https://5a5a57ff32a328601212-ee0df397c56b146e91fe14be42fa361d.ssl.cf1.rackcdn.com/icon/instagram_logos_glyph/03H5cHNMt-Jni4pe9u+7/glyph-logo_May2016_200.png" border="0" id="instagram"/></a></li>
+        <li><a href="https://www.instagram.com/enlyten_photography/?hl=en" target="blank"> <img src="https://5a5a57ff32a328601212-ee0df397c56b146e91fe14be42fa361d.ssl.cf1.rackcdn.com/icon/instagram_logos_app_icon/YyepHGHDvkl1wFkUHw8Y/Instagram-v051916_200.png" border="0" id="instagram"/></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
 </nav>
-
+<!-- MASONRY LAYOUT-->
 <div id="container" class="cols">
-    <div class="box one"></div>
-    <div class="box two"></div>
-    <div class="box one"></div>
-    <div class="box three"></div>
-    <div class="box two"></div>
-    <div class="box five"></div>
-    <div class="box one"></div>
+<!-- hollyWedding  -->   
+    <div class="hollyWedding"><img src="http://i349.photobucket.com/albums/q397/oghp78/11222382_10203990747648860_1864505889220582267_o_zpstsg2pel8.jpg" id="hollyWedding"/></div>
+<!-- booneWedding -->   
+    <div class="booneWedding"><img src="http://i349.photobucket.com/albums/q397/oghp78/381970_203327436423284_1779295458_n_zpsrtzq0jne.jpg" id="booneWedding"/></div>
+<!-- heatherFamily -->
+    <div class="heatherFamily"><img src="http://i349.photobucket.com/albums/q397/oghp78/68178_376847449071281_407932526_n_zpslj0kmx7g.jpg" id="heatherFamily"/></div>
+<!-- pie  --> 
+    <div class="pie"><img src="http://i349.photobucket.com/albums/q397/oghp78/382852_181434031945958_405672154_n_zps5fnz7gmj.jpg" id="pie"/></div>
+<!-- reflection -->
+    <div class="reflection"><img src="http://i349.photobucket.com/albums/q397/oghp78/reflection_zpshcwb4nix.jpg" id="reflection"/></div>
+<!-- redcross -->
+    <div class="redcross"><img src="http://i349.photobucket.com/albums/q397/oghp78/312088_149609315128430_384520252_n_zps8nt2csqe.jpg" id="redcross"/></div>
+<!-- moon -->    
+    <div class="moon"><img src="http://i349.photobucket.com/albums/q397/oghp78/11838699_861068283982526_6396399931824701185_o_zpsk4tbqgtd.jpg" id="moon"/></div>
+<!-- rainer  -->  
+    <div class="rainier"><img src="http://i349.photobucket.com/albums/q397/oghp78/530312_383698111719548_1635803862_n_zps79ojgyfd.jpg" id="rainier"/></div>
+<!-- familyBridge -->
+    <div class="familyBridge"><img src="http://i349.photobucket.com/albums/q397/oghp78/406604_376846855738007_177206845_n_zpsne2ynf1d.jpg" id="familyBridge"/></div>
     <div class="box two"></div>
     <div class="box six"></div>
     <div class="box three"></div>
